--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
+<!--                                                         -->
+<!--                __   ,                                   -->
+<!--             /\'  |  |\                                  -->
+<!--          _/'      `~  \                                 -->
+<!--         (              `\   Created by Lucas Caton      -->
+<!--          \     __        )  https://goo.gl/ZOiUqH       -->
+<!--           )_,-~  `=     /                               -->
+<!--                    `___'                                -->
+<!--                     ,-,                                 -->
+<!--                     `~                                  -->
+
 <!DOCTYPE html>
 <html lang='pt-BR'>
   <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-
     <title>Youtubers na Austrália</title>
-
     <link rel='stylesheet' href='stylesheets/application.css' type='text/css' media='screen' charset='utf-8'>
   </head>
 
