Replacing BigSky map with Google Maps

--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
       <h1>Youtubers na Austrália</h1>
     </div>
 
-    <iframe src='http://bigsky.io/maps/4c3b58f' frameborder='0' width='100%' height='100%'></iframe>
+    <iframe src="https://www.google.com/maps/d/u/0/embed?mid=zHVCJzE3X44o.kivnSfOfTi_I" width="100%" height="100%"></iframe>
   </body>
 </html>
